@@ -5,6 +5,7 @@ export(TAXONOMY_RANKS)
 export(ZTransform)
 export(addCluster)
 export(addContaminantQC)
+export(addDominant)
 export(addNotContaminantQC)
 export(addPerSampleDominantFeatures)
 export(addPerSampleDominantTaxa)
@@ -29,6 +30,7 @@ export(estimateRichness)
 export(full_join)
 export(getBestDMNFit)
 export(getDMN)
+export(getDominant)
 export(getExperimentCrossAssociation)
 export(getExperimentCrossCorrelation)
 export(getPrevalence)
@@ -108,6 +110,7 @@ exportMethods("relabundance<-")
 exportMethods(ZTransform)
 exportMethods(addCluster)
 exportMethods(addContaminantQC)
+exportMethods(addDominant)
 exportMethods(addHierarchyTree)
 exportMethods(addNotContaminantQC)
 exportMethods(addPerSampleDominantFeatures)
@@ -138,6 +141,7 @@ exportMethods(estimateRichness)
 exportMethods(full_join)
 exportMethods(getBestDMNFit)
 exportMethods(getDMN)
+exportMethods(getDominant)
 exportMethods(getExperimentCrossAssociation)
 exportMethods(getExperimentCrossCorrelation)
 exportMethods(getHierarchyTree)
